CREATE TABLE IF NOT EXISTS analytics.dim_date (
    date_key integer PRIMARY KEY,
    full_date date NOT NULL UNIQUE,
    day_number smallint NOT NULL,
    day_name text NOT NULL,
    weekday_number smallint NOT NULL,
    week_number smallint NOT NULL,
    month_number smallint NOT NULL,
    month_name text NOT NULL,
    quarter_number smallint NOT NULL,
    year_number integer NOT NULL,
    is_weekend boolean NOT NULL,
    CONSTRAINT dim_date_date_key_chk CHECK (date_key >= 0),
    CONSTRAINT dim_date_day_number_chk CHECK (day_number BETWEEN 1 AND 31),
    CONSTRAINT dim_date_weekday_number_chk CHECK (weekday_number BETWEEN 1 AND 7),
    CONSTRAINT dim_date_week_number_chk CHECK (week_number BETWEEN 1 AND 53),
    CONSTRAINT dim_date_month_number_chk CHECK (month_number BETWEEN 1 AND 12),
    CONSTRAINT dim_date_quarter_number_chk CHECK (quarter_number BETWEEN 1 AND 4),
    CONSTRAINT dim_date_year_number_chk CHECK (year_number BETWEEN 1900 AND 2500)
);

CREATE TABLE IF NOT EXISTS analytics.dim_category (
    category_key bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_category_id integer UNIQUE,
    category_name text NOT NULL,
    archived boolean,
    is_unknown boolean NOT NULL DEFAULT false,
    created_at timestamptz NOT NULL DEFAULT current_timestamp,
    updated_at timestamptz NOT NULL DEFAULT current_timestamp
);

CREATE TABLE IF NOT EXISTS analytics.dim_subcategory (
    subcategory_key bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_subcategory_id integer UNIQUE,
    category_key bigint,
    subcategory_name text NOT NULL,
    archived boolean,
    is_unknown boolean NOT NULL DEFAULT false,
    created_at timestamptz NOT NULL DEFAULT current_timestamp,
    updated_at timestamptz NOT NULL DEFAULT current_timestamp,
    CONSTRAINT dim_subcategory_category_fk FOREIGN KEY (category_key)
        REFERENCES analytics.dim_category(category_key)
);

CREATE TABLE IF NOT EXISTS analytics.dim_country (
    country_key bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_country_id integer UNIQUE,
    country_name text NOT NULL,
    abbreviation text,
    is_unknown boolean NOT NULL DEFAULT false,
    created_at timestamptz NOT NULL DEFAULT current_timestamp,
    updated_at timestamptz NOT NULL DEFAULT current_timestamp
);

CREATE TABLE IF NOT EXISTS analytics.dim_state (
    state_key bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_state_id integer UNIQUE,
    country_key bigint,
    state_name text NOT NULL,
    abbreviation text,
    is_unknown boolean NOT NULL DEFAULT false,
    created_at timestamptz NOT NULL DEFAULT current_timestamp,
    updated_at timestamptz NOT NULL DEFAULT current_timestamp,
    CONSTRAINT dim_state_country_fk FOREIGN KEY (country_key)
        REFERENCES analytics.dim_country(country_key)
);

CREATE TABLE IF NOT EXISTS analytics.dim_location (
    location_key bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    city text,
    address1 text,
    building text,
    room_number text,
    latitude numeric(9,6),
    longitude numeric(9,6),
    location_type text,
    location_signature text UNIQUE,
    is_unknown boolean NOT NULL DEFAULT false,
    is_not_applicable boolean NOT NULL DEFAULT false,
    created_at timestamptz NOT NULL DEFAULT current_timestamp,
    CONSTRAINT dim_location_latitude_chk CHECK (latitude IS NULL OR latitude BETWEEN -90 AND 90),
    CONSTRAINT dim_location_longitude_chk CHECK (longitude IS NULL OR longitude BETWEEN -180 AND 180)
);

CREATE TABLE IF NOT EXISTS analytics.dim_organizing_unit (
    organizing_unit_key bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    primary_host_spoid text UNIQUE,
    primary_host_name text NOT NULL,
    primary_host_type text,
    section_spoids text,
    region_spoids text,
    society_spoids text,
    is_unknown boolean NOT NULL DEFAULT false,
    created_at timestamptz NOT NULL DEFAULT current_timestamp,
    updated_at timestamptz NOT NULL DEFAULT current_timestamp
);

CREATE INDEX IF NOT EXISTS idx_dim_organizing_unit_primary_host_type
    ON analytics.dim_organizing_unit(primary_host_type);

CREATE INDEX IF NOT EXISTS idx_dim_organizing_unit_primary_host_name
    ON analytics.dim_organizing_unit(primary_host_name);
