CREATE TABLE IF NOT EXISTS analytics.fact_events (
    event_key bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_event_id bigint UNIQUE NOT NULL,
    date_key integer NOT NULL,
    category_key bigint NOT NULL DEFAULT 0,
    subcategory_key bigint NOT NULL DEFAULT 0,
    country_key bigint NOT NULL DEFAULT 0,
    state_key bigint NOT NULL DEFAULT 0,
    location_key bigint NOT NULL DEFAULT 0,
    organizing_unit_key bigint NOT NULL DEFAULT 0,
    title text NOT NULL,
    description text,
    start_time timestamptz NOT NULL,
    end_time timestamptz,
    time_zone text,
    source_link text,
    duration_hours numeric(12,2),
    ieee_attending integer,
    guests_attending integer,
    total_attendance integer,
    max_registrations integer,
    speaker_count integer,
    event_count smallint NOT NULL DEFAULT 1,
    virtual boolean NOT NULL DEFAULT false,
    cancelled boolean NOT NULL DEFAULT false,
    published boolean NOT NULL DEFAULT false,
    is_valid_date boolean,
    attendance_available boolean NOT NULL DEFAULT false,
    registration_available boolean NOT NULL DEFAULT false,
    has_capacity boolean NOT NULL DEFAULT false,
    has_location boolean NOT NULL DEFAULT false,
    has_subcategory boolean NOT NULL DEFAULT false,
    source_created_at timestamptz,
    source_updated_at timestamptz,
    etl_run_id bigint,
    loaded_at timestamptz NOT NULL DEFAULT current_timestamp,
    CONSTRAINT fact_events_date_fk FOREIGN KEY (date_key) REFERENCES analytics.dim_date(date_key),
    CONSTRAINT fact_events_category_fk FOREIGN KEY (category_key) REFERENCES analytics.dim_category(category_key),
    CONSTRAINT fact_events_subcategory_fk FOREIGN KEY (subcategory_key) REFERENCES analytics.dim_subcategory(subcategory_key),
    CONSTRAINT fact_events_country_fk FOREIGN KEY (country_key) REFERENCES analytics.dim_country(country_key),
    CONSTRAINT fact_events_state_fk FOREIGN KEY (state_key) REFERENCES analytics.dim_state(state_key),
    CONSTRAINT fact_events_location_fk FOREIGN KEY (location_key) REFERENCES analytics.dim_location(location_key),
    CONSTRAINT fact_events_organizing_unit_fk FOREIGN KEY (organizing_unit_key) REFERENCES analytics.dim_organizing_unit(organizing_unit_key),
    CONSTRAINT fact_events_duration_chk CHECK (duration_hours IS NULL OR duration_hours >= 0),
    CONSTRAINT fact_events_ieee_attending_chk CHECK (ieee_attending IS NULL OR ieee_attending >= 0),
    CONSTRAINT fact_events_guests_attending_chk CHECK (guests_attending IS NULL OR guests_attending >= 0),
    CONSTRAINT fact_events_total_attendance_chk CHECK (total_attendance IS NULL OR total_attendance >= 0),
    CONSTRAINT fact_events_max_registrations_chk CHECK (max_registrations IS NULL OR max_registrations >= 0),
    CONSTRAINT fact_events_speaker_count_chk CHECK (speaker_count IS NULL OR speaker_count >= 0),
    CONSTRAINT fact_events_event_count_chk CHECK (event_count = 1),
    CONSTRAINT fact_events_end_after_start_chk CHECK (end_time IS NULL OR end_time >= start_time),
    CONSTRAINT fact_events_attendance_available_chk CHECK (
        NOT attendance_available OR ieee_attending IS NOT NULL OR guests_attending IS NOT NULL
    ),
    CONSTRAINT fact_events_total_attendance_match_chk CHECK (
        ieee_attending IS NULL OR guests_attending IS NULL OR total_attendance = ieee_attending + guests_attending
    )
);

CREATE INDEX IF NOT EXISTS idx_fact_events_date_key ON analytics.fact_events(date_key);
CREATE INDEX IF NOT EXISTS idx_fact_events_category_key ON analytics.fact_events(category_key);
CREATE INDEX IF NOT EXISTS idx_fact_events_subcategory_key ON analytics.fact_events(subcategory_key);
CREATE INDEX IF NOT EXISTS idx_fact_events_country_key ON analytics.fact_events(country_key);
CREATE INDEX IF NOT EXISTS idx_fact_events_state_key ON analytics.fact_events(state_key);
CREATE INDEX IF NOT EXISTS idx_fact_events_location_key ON analytics.fact_events(location_key);
CREATE INDEX IF NOT EXISTS idx_fact_events_organizing_unit_key ON analytics.fact_events(organizing_unit_key);
CREATE INDEX IF NOT EXISTS idx_fact_events_cancelled ON analytics.fact_events(cancelled);
CREATE INDEX IF NOT EXISTS idx_fact_events_virtual ON analytics.fact_events(virtual);
CREATE INDEX IF NOT EXISTS idx_fact_events_published ON analytics.fact_events(published);
CREATE INDEX IF NOT EXISTS idx_fact_events_attendance_available ON analytics.fact_events(attendance_available);
CREATE INDEX IF NOT EXISTS idx_fact_events_start_time ON analytics.fact_events(start_time);
